fix bug caused by use of vh on small screens

--- a/docs/site.css
+++ b/docs/site.css
@@ -12,12 +12,6 @@ html {
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 90rem;
-    margin-left: auto;
-    margin-right: auto;
     font-size: 1.4rem;
     line-height: 1.6rem;
     font-family: "Open Sans", sans-serif;
@@ -28,8 +22,10 @@ body {
 #main {
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
+    width: 90rem;
     backdrop-filter: blur(3rem);
-    height: 100%;
+    margin: 0 auto;
 }
 
 /* Blur does not work for print so we'll give the background a slightly white glaze, not as nice but 🤷🏻‍♂️ */
@@ -40,20 +36,16 @@ body {
 }
 
 main {
+    flex: 1 1 auto;
     display: grid;
     grid-template-columns: .6fr 1fr;
-    flex-grow: 1;
-}
-
-main>div {
     height: 100%;
 }
 
 main>div:nth-of-type(1) {
     background-color: var(--primary-bg);
     color: var(--plain-text-inverted);
-    margin: -2rem 0 0 0;
-    padding: 2rem 1rem 0;
+    padding: 0 1rem;
 }
 
 main>div:nth-of-type(1) em {
@@ -62,8 +54,7 @@ main>div:nth-of-type(1) em {
 
 
 main>div:nth-of-type(2) {
-    margin: -2rem 0 0 0;
-    padding: 2rem 2rem 0;
+    padding: 0 2rem;
     background: var(--secondary-bg);
 }
 
@@ -106,7 +97,6 @@ header {
     border-bottom: .5rem solid var(--primary-fg);
     background: var(--primary-bg);
     padding: 1rem 0;
-    margin: 0 0 2rem;
     line-height: 3rem;
 }
 
@@ -116,10 +106,6 @@ header h2 {
 
 section {
     margin: 2rem 0;
-}
-
-div>section:nth-of-type(1) {
-    margin: 0 0 2rem;
 }
 
 p {
